# nowtrendin-v2.0

./: .gitignore  06_10_26_market_signal.py  07 17 2026 - nowtrendin_scoring_assessor.py  6_9_2026_now_trending.py  AGENT_CHARTER.md  CALIBRATION_FIFA_ANALYSIS.md  CHECKPOINT_2026-06-10.md  CHECKPOINT_2026-06-10_eod.md  CLAUDE.md  CONSOLIDATION_CHECKPOINT_2026-06-15.md  COST_MODEL.md  DATA_BUILDING_BLOCKS.md  DB_DATA_DICTIONARY.md  ENGINE_AND_REPO_FREEZE.md  HEALTH_AUDIT.md  MARKET_SIGNAL_V2.md  MILESTONE_1.md  NowTrendin_SignIn_Flow.xlsx  SESSION_LOG.md  SITUATION_MODEL.md  UPDATE_VERIFICATION.md  accuracy_ledger_enhanced.py  index.html  make_flow_xlsx.py  momentum_engine.py  redeploy-web.ps1  redeploy-web.sh  setup-capacitor.ps1
.claude/: launch.json
.githooks/: .gitattributes  README.md  commit-msg
_audit_work/: audit_full.json  build_contract_pdf.py  build_pdf.py  contract_audit_full.json  contract_findings.md  datecanon.json  gen_dict.py  live_schema.json  report_sections.md
assets/: index-6W-wEiUb.js  index-7UTSX5OB.css  index-8tM7ABzk.js  index-B-K6yHKg.js  index-B1JXtXvu.js  index-B5-aru8I.js  index-B6btXhNp.js  index-B6sClMRc.js  index-BEDijcTW.js  index-BEmpyJR5.js  index-BN0h97rv.css  index-BOA8IHGu.js  index-BOCIFvc_.js  index-BOVodZpY.js  index-BSc29LMP.js  index-BVYkO9kT.js  index-BZ9yHgRs.css  index-BbjsXVk6.js  index-BfmU0H0M.js  index-BjRJwhvV.js  index-BoPEynUh.js  index-BrT3sWKc.js  index-BsGJsFnP.js  (+76 more)
tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tauri-desktop/src-tauri/icons/: icon.icns
tauri-desktop/src-tauri/src/: main.rs
(+367 files in other folders)
