[package]
name = "nowtrendin-desktop"
version = "2.0.0"
description = "Now TrendIn desktop shell (Tauri 2) wrapping the Expo web build"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
